--- a/index.html
+++ b/index.html
@@ -401,9 +401,8 @@
           <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="team.html">Team</a></li>
-            <li><a href="#programs">Programs</a></li>
-            <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="programs.html">Programs</a></li>
+            <li><a href="help.html">Help Us</a></li>
           </ul>
         </nav>
       </div>
@@ -856,14 +855,14 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <div class="logo">YourCity<span>MathTutor</span></div>
+        <div class="logo">TechTrek Ranger</span></div>
         <div class="social-links">
           <a href="#"><i class="fab fa-facebook">f</i></a>
           <a href="#"><i class="fab fa-twitter">t</i></a>
           <a href="#"><i class="fab fa-instagram">i</i></a>
           <a href="#"><i class="fab fa-linkedin">in</i></a>
         </div>
-        <p>&copy; 2023 Your City Math Tutor. All Rights Reserved.</p>
+        <p>&copy; 2024 TechTrek Ranger. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
