--- a/help.html
+++ b/help.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TechTrek Ranger</title>
+  <link rel="icon" type="image/png" href="images/ttranger_half_logo.png" />
   <style>
     /* Reuse the same styles from index.html */
     * {
@@ -28,8 +29,8 @@
     }
 
     header {
-      background-color: #2c3e50;
-      color: white;
+      background-color: #e8f9fd;
+      color: #000000;
       padding: 20px 0;
       position: sticky;
       top: 0;
@@ -47,8 +48,10 @@
       font-weight: bold;
     }
 
-    .logo span {
-      color: #3498db;
+    .logo img {
+      height: 65px;
+      /* Adjust as needed */
+      margin-left: 10px;
     }
 
     .nav-links {
@@ -61,7 +64,7 @@
     }
 
     .nav-links a {
-      color: white;
+      color: #000000;
       text-decoration: none;
       transition: color 0.3s;
     }
@@ -154,8 +157,8 @@
     }
 
     footer {
-      background-color: #2c3e50;
-      color: white;
+      background-color: #e8f9fd;
+      color: #000000;
       text-align: center;
       padding: 30px 0;
     }
@@ -165,7 +168,7 @@
     }
 
     .social-links a {
-      color: white;
+      color: #000000;
       margin: 0 10px;
       font-size: 20px;
       transition: color 0.3s;
@@ -194,7 +197,7 @@
   <header>
     <div class="container">
       <nav>
-        <div class="logo">TechTrek Ranger</div>
+        <div class="logo"><img src="images/ttranger_full_logo.png" alt="fulllogo" /></div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="team.html">Team</a></li>
@@ -204,13 +207,6 @@
       </nav>
     </div>
   </header>
-
-  <!-- Page Header -->
-  <section class="page-header">
-    <div class="container">
-      <h1>Support Our Mission</h1>
-    </div>
-  </section>
 
   <!-- Donation -->
   <section class="team-section">
@@ -247,14 +243,14 @@
               hostedButtonId: "TMLSHB9E3KPSE",
             }).render("#paypal-container-TMLSHB9E3KPSE")
           </script>
-        <!-- <form action="https://www.paypal.com/donate" method="post" target="_top">
+          <!-- <form action="https://www.paypal.com/donate" method="post" target="_top">
           <input type="hidden" name="hosted_button_id" value="2V9CFQJKRDA2W" />
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit"
             title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
           <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
         </form> -->
+        </div>
       </div>
-    </div>
   </section>
 
 
