--- a/team.html
+++ b/team.html
@@ -1,245 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TechTrek Ranger</title>
+    <link rel="icon" type="image/png" href="images/ttranger_half_logo.png" />
+    <style>
+      /* Reuse the same styles from index.html */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Arial", sans-serif;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TechTrek Ranger</title>
-  <style>
-    /* Reuse the same styles from index.html */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Arial", sans-serif;
-    }
+      body {
+        line-height: 1.6;
+        color: #333;
+        background-color: #f9f9f9;
+      }
 
-    body {
-      line-height: 1.6;
-      color: #333;
-      background-color: #f9f9f9;
-    }
+      .container {
+        width: 90%;
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+      }
 
-    .container {
-      width: 90%;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 15px;
-    }
+      header {
+        background-color: #e8f9fd;
+        color: #000000;
+        padding: 20px 0;
+        position: sticky;
+        top: 0;
+        z-index: 100;
+      }
 
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 20px 0;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
+      nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+      .logo {
+        font-size: 24px;
+        font-weight: bold;
+      }
 
-    .logo {
-      font-size: 24px;
-      font-weight: bold;
-    }
+      .logo img {
+        height: 65px;
+        /* Adjust as needed */
+        margin-left: 10px;
+      }
 
-    .logo span {
-      color: #3498db;
-    }
+      .nav-links {
+        display: flex;
+        list-style: none;
+      }
 
-    .nav-links {
-      display: flex;
-      list-style: none;
-    }
+      .nav-links li {
+        margin-left: 30px;
+      }
 
-    .nav-links li {
-      margin-left: 30px;
-    }
+      .nav-links a {
+        color: #000000;
+        text-decoration: none;
+        transition: color 0.3s;
+      }
 
-    .nav-links a {
-      color: white;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
+      .nav-links a:hover {
+        color: #3498db;
+      }
 
-    .nav-links a:hover {
-      color: #3498db;
-    }
-
-    .page-header {
-      background-color: #3498db;
-      color: white;
-      text-align: center;
-      padding: 60px 0;
-    }
-
-    .page-header h1 {
-      font-size: 42px;
-      margin-bottom: 20px;
-    }
-
-    .team-section {
-      padding: 80px 0;
-      background-color: white;
-    }
-
-    .section-title {
-      text-align: center;
-      margin-bottom: 50px;
-      font-size: 36px;
-      color: #2c3e50;
-    }
-
-    .team-member {
-      display: flex;
-      align-items: center; /* Vertically align image and text */
-      max-width: 800px;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    .team-member img{
-      width: 200px; /* Fixed width for images */
-      height: 200px; /* Fixed height for images */
-      object-fit: cover; /* Ensure images maintain aspect ratio */
-      margin-right: 20px;
-      border-radius: 10px;
-    }
-
-    .member-info {
-      flex: 1;
-      min-width: 200px;
-    }
-
-    .member-info h3 {
-      margin: 0 0 10px;
-      font-size: 24px;
-      color: #3498db;
-    }
-
-    .member-info p {
-      margin: 0;
-      font-size: 16px;
-      color: #333;
-    }
-
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 30px 0;
-    }
-
-    .social-links {
-      margin: 20px 0;
-    }
-
-    .social-links a {
-      color: white;
-      margin: 0 10px;
-      font-size: 20px;
-      transition: color 0.3s;
-    }
-
-    .social-links a:hover {
-      color: #3498db;
-    }
-
-    @media (max-width: 768px) {
-
-      .team-member,
-      .team-member:nth-child(even) {
-        flex-direction: column;
+      .page-header {
+        background-color: #3498db;
+        color: white;
+        text-align: center;
+        padding: 60px 0;
       }
 
       .page-header h1 {
-        font-size: 32px;
+        font-size: 42px;
+        margin-bottom: 20px;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <!-- Header & Navigation -->
-  <header>
-    <div class="container">
-      <nav>
-        <div class="logo">TechTrek Ranger</div>
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="programs.html">Programs</a></li>
-          <li><a href="help.html">Help Us</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+      .team-section {
+        padding: 80px 0;
+        background-color: white;
+      }
 
-  <!-- Page Header -->
-  <section class="page-header">
-    <div class="container">
-      <h1>Meet Our Volunteers</h1>
-    </div>
-  </section>
+      .section-title {
+        text-align: center;
+        margin-bottom: 50px;
+        font-size: 36px;
+        color: #2c3e50;
+      }
 
-  <!-- Team Section -->
-  <section class="team-section">
-    <div class="container">
-      <div class="team-member">
-          <img
-            src="images/kathyhuang.jpeg"
-            alt="Lead Math Tutor" />
-        <div class="member-info">
-          <h3>Kathy Huang</h3>
-            <p>
-              Hi, I'm Kathy. I’m a software engineer at Google with 5+ years
-              of experiences in high-tech companies. I love building software
-              and analyzing complex data using AI. Helping others learn how to
-              code is something I’m truly passionate about. Outside of tech, I
-              enjoy cooking up new recipes and reading books.
-            </p>
-        </div>
+      .team-member {
+        display: flex;
+        align-items: center;
+        /* Vertically align image and text */
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      .team-member img {
+        width: 200px;
+        /* Fixed width for images */
+        height: 200px;
+        /* Fixed height for images */
+        object-fit: cover;
+        /* Ensure images maintain aspect ratio */
+        margin-right: 20px;
+        border-radius: 10px;
+      }
+
+      .member-info {
+        flex: 1;
+        min-width: 200px;
+      }
+
+      .member-info h3 {
+        margin: 0 0 10px;
+        font-size: 24px;
+        color: #3498db;
+      }
+
+      .member-info p {
+        margin: 0;
+        font-size: 16px;
+        color: #333;
+      }
+
+      footer {
+        background-color: #e8f9fd;
+        color: #000000;
+        text-align: center;
+        padding: 30px 0;
+      }
+
+      .social-links {
+        margin: 20px 0;
+      }
+
+      .social-links a {
+        color: #000000;
+        margin: 0 10px;
+        font-size: 20px;
+        transition: color 0.3s;
+      }
+
+      .social-links a:hover {
+        color: #3498db;
+      }
+
+      @media (max-width: 768px) {
+        .team-member,
+        .team-member:nth-child(even) {
+          flex-direction: column;
+        }
+
+        .page-header h1 {
+          font-size: 32px;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <!-- Header & Navigation -->
+    <header>
+      <div class="container">
+        <nav>
+          <div class="logo">
+            <img src="images/ttranger_full_logo.png" alt="fulllogo" />
+          </div>
+          <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="team.html">Team</a></li>
+            <li><a href="programs.html">Programs</a></li>
+            <li><a href="help.html">Help Us</a></li>
+          </ul>
+        </nav>
       </div>
+    </header>
 
-      <!-- Additional team members can be added here -->
-      <div class="team-member">
-          <img
-            src="images/brianliu.jpeg"
-            alt="Math Tutor" />
-        <div class="member-info">
-          <h3>J.Q. (Brian) Liu</h3>
+    <!-- Team Section -->
+    <section class="team-section">
+      <div class="container">
+        <div class="team-member">
+          <img src="images/kathyhuang.jpeg" alt="Lead Math Tutor" />
+          <div class="member-info">
+            <h3>Kathy Huang</h3>
+            <p>
+              Hi, I'm Kathy. I’m a software engineer at Google with 5+ years of
+              experiences in high-tech companies. I love building software and
+              analyzing complex data using AI. Helping others learn how to code
+              is something I’m truly passionate about. Outside of tech, I enjoy
+              cooking up new recipes and reading books.
+            </p>
+          </div>
+        </div>
+
+        <!-- Additional team members can be added here -->
+        <div class="team-member">
+          <img src="images/brianliu.jpeg" alt="Math Tutor" />
+          <div class="member-info">
+            <h3>J.Q. (Brian) Liu</h3>
             <p>
               Hi, I'm Brian. I'm a computer science professor at the NC State
               University. I teach computer networks, quantum engineering,
-              cybersecurity, and programming courses. I also supervise
-              graduate and post-graduate students as we explore some of
-              today’s most challenging research problems. I enjoy playing
-              soccer and woodworking in my free time.
+              cybersecurity, and programming courses. I also supervise graduate
+              and post-graduate students as we explore some of today’s most
+              challenging research problems. I enjoy playing soccer and
+              woodworking in my free time.
             </p>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="logo">TechTrek Ranger</span></div>
-      <div class="social-links">
-        <a href="#"><i class="fab fa-facebook">f</i></a>
-        <a href="#"><i class="fab fa-twitter">t</i></a>
-        <a href="#"><i class="fab fa-instagram">i</i></a>
-        <a href="#"><i class="fab fa-linkedin">in</i></a>
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="logo">TechTrek Ranger</div>
+        <div class="social-links">
+          <a href="#"><i class="fab fa-facebook">f</i></a>
+          <a href="#"><i class="fab fa-twitter">t</i></a>
+          <a href="#"><i class="fab fa-instagram">i</i></a>
+          <a href="#"><i class="fab fa-linkedin">in</i></a>
+        </div>
+        <p>&copy; 2024 TechTrek Ranger. All Rights Reserved.</p>
       </div>
-      <p>&copy; 2024 TechTrek Ranger. All Rights Reserved.</p>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
