--- a/programs.html
+++ b/programs.html
@@ -97,6 +97,21 @@
       color: #2c3e50;
     }
 
+    .btn {
+      display: inline-block;
+      background-color: #3498db;
+      color: white;
+      padding: 12px 30px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.3s;
+    }
+
+    .btn:hover {
+      background-color: #2980b9;
+    }
+
     /* programs Section */
     .programs {
       padding: 80px 0;
