--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
           display: none; /* Initially hide the links on mobile */
           flex-direction: column;
           position: absolute;
-          top: 60px; /* Adjust based on your header's height */
+          top: 100px; /* Adjust based on your header's height */
           left: 0;
           width: 100%;
-          background-color: #444;
+          background-color: #e8f9fd;
           padding: 1rem 0;
           text-align: center;
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 10px #e8f9fd;
         }
 
         .nav-links.active {
@@ -109,7 +109,7 @@
           display: block;
           width: 25px;
           height: 3px;
-          background-color: white;
+          background-color: rgb(0, 0, 0);
           position: relative;
           transition: all 0.3s ease-in-out;
         }
