--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           background-color: #e8f9fd;
           padding: 1rem 0;
           text-align: center;
-          box-shadow: 0 2px 10px #e8f9fd;
+          box-shadow: 0 2px 5px #e8f9fd;
         }
 
         .nav-links.active {
@@ -120,7 +120,7 @@
           position: absolute;
           width: 100%;
           height: 3px;
-          background-color: white;
+          background-color: rgb(0, 0, 0);
           transition: all 0.3s ease-in-out;
         }
 
